--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
                             <div id="collapse2_6" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingTwo">
                                 <div class="panel-body p-4">
                                     <p class="mbr-fonts-style panel-text display-7">
-                                       شرایط مربوط به چگونگی همکاری با شرکت و همچنین نمایندگی در وب سایت یوتاب و بخش همکاری با ما توضیح داده شده است . شما می توانید فرم همکاری مربوطه را در بخش یاد شده پر نموده و بصورت آنلاین برایمان بفرستید</p>
+                                       شرایط مربوط به چگونگی همکاری با شرکت و همچنین نمایندگی در وب سایت یوتاب و بخش همکاری با ما توضیح داده شده است . شما می توانید اطلاعات مربوطه را در بخش یاد شده برایمان بفرستید</p>
                                 </div>
                             </div>
                         </div>
