--- a/appdl.html
+++ b/appdl.html
@@ -184,7 +184,7 @@
                     </div>
                     <div class="icon-contacts pb-3">
                         <h5 class="align-left mbr-fonts-style display-7">آماده دریافت پیشنهادات و انتقادات شما هستیم</h5>
-                        <p class="mbr-text align-left mbr-fonts-style display-5">+98 21 44753410 :تلفن<br><a href="/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="c7bea8b2b3a8a5e9aeb587a0aaa6aeabe9a4a8aa">[email&#160;protected]</a> :ایمیل<br>نشانی: تهران، شهرک گلستان، بلوار هوانیروز، خیابان گل آرا، کوچه کوهیار غربی، پلاک 33</p>
+                        <p class="mbr-text align-left mbr-fonts-style display-5">+98 21 44753410 :تلفن<br>youtob.ir@gmail.com :ایمیل<br>نشانی: تهران، شهرک گلستان، بلوار هوانیروز، خیابان گل آرا، کوچه کوهیار غربی، پلاک 33</p>
                     </div>
                 </div>
 		<div>
