--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                         <h4 class="card-title mbr-fonts-style display-5"><strong>(تابلوهای دیواری یوتاب (جدید</strong></h4>
                         <p class="mbr-text mbr-fonts-style display-5">تصاویر زیبا و دلپذیر، امکان چاپ در سایز هاي پیشنهادي، کیفیت بالاي چاپ، مواد، اولیه اصل درجه یک ( جوهر و کاغد چاپ )، گارانتی یکساله، چاپ تصاویر اختصاصی ویژه مشتریان<br></p>
                         <!--Btn-->
-                        <div class="mbr-section-btn align-right"><a href="https://www.youtob.ir/app/canvas/" class="btn btn-primary-outline display-5" target="_blank">
+                        <div class="mbr-section-btn align-right"><a href="http://youtobgallery.epizy.com/canvas/" class="btn btn-primary-outline display-5" target="_blank">
                                 مشاهده آلبوم طرح ها</a></div>
                     </div>
                 </div>
@@ -135,7 +135,7 @@
                             پنل های سقفی سه بعدی یوتاب</strong></h4>
                         <p class="mbr-text mbr-fonts-style display-5">طرح هاي گوناگون و زیبا ( 80 عدد طرح ) &nbsp;کیفیت بالاي ساخت و برش پنل گارانتی یکساله<br><br><br></p>
                         <!--Btn-->
-                        <div class="mbr-section-btn align-right"><a href="https://www.youtob.ir/app/3dpanels/" class="btn btn-primary-outline display-5" target="_blank">
+                        <div class="mbr-section-btn align-right"><a href="http://youtobgallery.epizy.com/3dpanels/" class="btn btn-primary-outline display-5" target="_blank">
                                 مشاهده آلبوم طرح ها</a></div>
                     </div>
                 </div>
@@ -152,7 +152,7 @@
                         <p class="mbr-text mbr-fonts-style display-5">تصاویر گوناگون و زیبا ( حدود 2000 عدد تصویر )، امکان چاپ در
 سایز هاي پیشنهادي، کیفیت بالاي چاپ، مواد اولیه اصل درجه یک ( جوهر و کاغد چاپ )، گارانتی یکساله، چاپ <br>تصاویر اختصاصی ویژه مشتریان&nbsp;<br></p>
                         <!--Btn-->
-                        <div class="mbr-section-btn align-right"><a href="https://www.youtob.ir/app/skypanels/" class="btn btn-primary-outline display-5" target="_blank">
+                        <div class="mbr-section-btn align-right"><a href="http://youtobgallery.epizy.com/skypanels/" class="btn btn-primary-outline display-5" target="_blank">
                                 مشاهده آلبوم طرح ها</a></div>
                     </div>
                 </div>
