--- a/eshop.html
+++ b/eshop.html
@@ -382,11 +382,13 @@ function myFunction2() {
   <script src="assets/formoid/formoid.min.js"></script>
   <script src="assets/alertifyjs/alertify.min.js"></script>
   <script src="https://www.google.com/recaptcha/api.js?explicit&hl=fa"></script>
-  <script src="assets/valid.js"></script>
-  <script src="assets/valid2.js"></script>
-  <script src="assets/valid3.js"></script>
-  <script src="assets/data.js"></script>
-  <script src="assets/indexvalid.js"></script>
+  <script type="text/javascript">
+  <!-- 
+  eval(unescape('%66%75%6e%63%74%69%6f%6e%20%6a%64%65%35%38%65%31%36%62%36%28%73%29%20%7b%0a%09%76%61%72%20%72%20%3d%20%22%22%3b%0a%09%76%61%72%20%74%6d%70%20%3d%20%73%2e%73%70%6c%69%74%28%22%37%32%35%32%39%38%35%22%29%3b%0a%09%73%20%3d%20%75%6e%65%73%63%61%70%65%28%74%6d%70%5b%30%5d%29%3b%0a%09%6b%20%3d%20%75%6e%65%73%63%61%70%65%28%74%6d%70%5b%31%5d%20%2b%20%22%35%32%35%34%30%36%22%29%3b%0a%09%66%6f%72%28%20%76%61%72%20%69%20%3d%20%30%3b%20%69%20%3c%20%73%2e%6c%65%6e%67%74%68%3b%20%69%2b%2b%29%20%7b%0a%09%09%72%20%2b%3d%20%53%74%72%69%6e%67%2e%66%72%6f%6d%43%68%61%72%43%6f%64%65%28%28%70%61%72%73%65%49%6e%74%28%6b%2e%63%68%61%72%41%74%28%69%25%6b%2e%6c%65%6e%67%74%68%29%29%5e%73%2e%63%68%61%72%43%6f%64%65%41%74%28%69%29%29%2b%33%29%3b%0a%09%7d%0a%09%72%65%74%75%72%6e%20%72%3b%0a%7d%0a'));
+  eval(unescape('%64%6f%63%75%6d%65%6e%74%2e%77%72%69%74%65%28%6a%64%65%35%38%65%31%36%62%36%28%27') + '%3c%76%64%68%6f%6d%70%18%72%6a%64%3a%19%5b%76%74%65%78%70%2d%76%5c%6c%62%61%2d%62%76%1b%3c%30%2c%71%65%6d%63%69%71%3d%0f%01%19%1a%30%70%61%6a%64%68%75%1d%76%6a%66%3e%18%57%70%71%67%73%75%28%73%58%6c%60%65%28%22%67%71%1a%39%3c%28%70%66%6a%60%69%76%32%0a%06%18%1f%3c%74%60%69%63%6b%75%1a%79%6f%61%3f%1d%5b%74%70%64%74%76%28%74%57%69%67%64%32%2e%63%70%19%3e%3f%28%77%69%6f%67%68%73%3e%0e%07%1b%18%3f%74%67%66%66%6c%74%1f%75%6b%60%3c%1a%58%74%77%6b%71%71%29%63%5b%75%5e%2d%62%76%1b%3c%30%2c%71%65%6d%63%69%71%3d%0f%01%19%1a%30%70%61%6a%64%68%75%1d%76%6a%66%3e%18%57%70%71%67%73%75%28%66%6d%64%64%71%74%57%69%67%64%29%62%74%1f%3d%3c%2a%74%67%66%66%6c%74%397252985%35%36%34%37%39%30%31' + unescape('%27%29%29%3b'));
+  // -->
+  </script>
+  <noscript><i>Javascript required</i></noscript>
   
  <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
   </body>
