--- a/index.html
+++ b/index.html
@@ -24,9 +24,8 @@
   <link rel="stylesheet" href="assets/gallery/style.css">
   <link href="assets/fonts/style.css" rel="stylesheet">
   <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
-  
-  
-  
+    
+  <meta name="google-site-verification" content="m6ht-PlkGdUxgl0-JVAuVxYrzGIX0mLASiRxVfyLu20" />
 </head>
 <body>
 
