--- a/appdl.html
+++ b/appdl.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
   <link rel="shortcut icon" href="assets/images/photo-2016-11-22-12-06-40-156x156.png" type="image/x-icon">
   <meta name="description" content="با اپ یوتاب مخصوص گوشی های اندرویدی قادر خواهید بود هرکجا که هستید آلبوم های ما را مشاهده کرده و یا به دوستان خود نشان دهید. همچنین امکان تماس با یوتاب و مشاهده ما در شبکه های اجتماعی نیز از طریق اپ میسر می باشد.">
+  <meta name="keywords" content="آسمان مجازی,,سقفی,روشنایی,یوتاب,داخلی,طراحی,دکوراسیون,سه بعدی,چاپ,شاسی,پنل,تابلو">  
   
   <title>دریافت اپلیکیشن یوتاب</title>
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons/mobirise-icons.css">
