--- a/coupon.html
+++ b/coupon.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
   <link rel="shortcut icon" href="assets/images/photo-2016-11-22-12-06-40-156x156.png" type="image/x-icon">
   <meta name="description" content="با استفاده از کوپن های تخفیف یوتاب در هنگام سفارش تلگرامی  یا اینستاگرامی از پنج درصد تخفیف برخوردار خواهید شد">
+  <meta name="keywords" content="آسمان مجازی,,سقفی,روشنایی,یوتاب,داخلی,طراحی,دکوراسیون,سه بعدی,چاپ,شاسی,پنل,تابلو">  
   
   <title>کوپن تخفیف یوتاب</title>
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons-bold/mobirise-icons-bold.css">
