--- a/eshop.html
+++ b/eshop.html
@@ -8,6 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
   <script src="/cdn-cgi/apps/head/Ttf3A6Ppfau0jWYwfGrqlsG9EXA.js"></script><link rel="shortcut icon" href="assets/images/photo-2016-11-22-12-06-40-156x156.png" type="image/x-icon">
   <meta name="description" content="با خرید آنلاین از یوتاب ضمن صرفه جویی در زمان و انرژِی می توانید از تخفیف پنج درصدی روی تمامی محصولات ما بهره مند گردید. به منظور ثبت سفارش اینترنتی ابتدا باید یکبار اطلاعات فردی و پستی خود را ثبت و کد کاربری دریافت نمایید و سپس با استفاده از کد کاربری براحتی سفارش خود را ثبت نمایید.">
+  <meta name="keywords" content="آسمان مجازی,,سقفی,روشنایی,یوتاب,داخلی,طراحی,دکوراسیون,سه بعدی,چاپ,شاسی,پنل,تابلو">  
   
   <title>خرید آنلاین از یوتاب</title>
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons/mobirise-icons.css">
