--- a/pcalbums.html
+++ b/pcalbums.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
   <link rel="shortcut icon" href="assets/images/photo-2016-11-22-12-06-40-156x156.png" type="image/x-icon">
   <meta name="description" content="کلیه همکاران و علاقه مندان به محصولات یوتاب می توانند آلبوم طرح های ما را از سایت دریافت کرده و بصورت آفلاین روی رایانه خود داشته باشند و بدون نیاز به اینترنت هر زمان مایل باشند آن را مشاهده نمایند">
+  <meta name="keywords" content="آسمان مجازی,,سقفی,روشنایی,یوتاب,داخلی,طراحی,دکوراسیون,سه بعدی,چاپ,شاسی,پنل,تابلو">  
   
   <title>دریافت گالری طرح ها نسخه ویندوز</title>
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons/mobirise-icons.css">
