--- a/reseller.html
+++ b/reseller.html
@@ -7,7 +7,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
   <link rel="shortcut icon" href="assets/images/photo-2016-11-22-12-06-40-156x156.png" type="image/x-icon">
   <meta name="description" content="در این قسمت علاقه مندان به همکاری با یوتاب می توانند فرم همکاری را دریافت کرده و پس از تکمیل آن را بصورت ایمیل، تلگرام و یا فکس برای ما ارسال نمایند">
-  
+  <meta name="keywords" content="آسمان مجازی,,سقفی,روشنایی,یوتاب,داخلی,طراحی,دکوراسیون,سه بعدی,چاپ,شاسی,پنل,تابلو">  
+
   <title>همکاری با یوتاب</title>
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons/mobirise-icons.css">
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons2/mobirise2.css">
