--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
   <link rel="shortcut icon" href="assets/images/photo-2016-11-22-12-06-40-156x156.png" type="image/x-icon">
   <meta name="description" content="گروه دکوراسیون یوتاب سازنده انواع پنل های آسمان مجازی، پنل های سه بعدی و تابلوهای دیواری شاسی با طرح های دلخواه از شما دعوت می کند ضمن بازدید از گالری سایت و طرح های بی نظیر موجود ما را از نظرات و پیشنهادات خودتان بهره مند سازید">
-  <meta name="keywords" content="آسمان مجازی,,سقفی,روشنایی,یوتاب,داخلی,طراحی,دکوراسیون,سه بعدی,چاپ,شاسی,پنل,تابلو">  
+  <meta name="keywords" content="آسمان مجازی,سقفی,روشنایی,یوتاب,داخلی,طراحی,دکوراسیون,سه بعدی,چاپ,شاسی,پنل,تابلو,آشپزخانه,اتاق خواب,پذیرایی,عکس,آلبوم,منزل,سقف کاذب,کناف">  
 
   <title> گروه دکوراسیون یوتاب - صفحه اصلی</title>
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons-bold/mobirise-icons-bold.css">
