--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <meta name="description" content="گروه دکوراسیون یوتاب سازنده انواع پنل های آسمان مجازی، پنل های سه بعدی و تابلوهای دیواری شاسی با طرح های دلخواه از شما دعوت می کند ضمن بازدید از گالری سایت و طرح های بی نظیر موجود ما را از نظرات و پیشنهادات خودتان بهره مند سازید">
   <meta name="keywords" content="آسمان مجازی,سقفی,روشنایی,یوتاب,داخلی,طراحی,دکوراسیون,سه بعدی,چاپ,شاسی,پنل,تابلو,آشپزخانه,اتاق خواب,پذیرایی,عکس,آلبوم,منزل,سقف کاذب,کناف">  
 
-  <title> گروه دکوراسیون یوتاب - صفحه اصلی</title>
+  <title> آسمان مجازی و انواع تابلوهای دیواری یوتاب - صفحه اصلی</title>
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons-bold/mobirise-icons-bold.css">
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons2/mobirise2.css">
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons/mobirise-icons.css">
