--- a/eshop.html
+++ b/eshop.html
@@ -226,7 +226,7 @@
 	</div>
     <div class="col-md-12 form-group">
       <label for="validationTooltip11">توضیحات</label>
-      <textarea name="توضیحات" dir="rtl" class="form-control input display-7" id="validationTooltip11" placeholder="هرگونه توضیح در مورد محصول مانند ابعاد و زوایا و یا تغییر آدرس و مشخصات دیگر را در اینجا بنویسید" required></textarea>
+      <textarea name="توضیحات" dir="rtl" class="form-control input display-7" id="" placeholder="هرگونه توضیح در مورد محصول مانند ابعاد و زوایا و یا تغییر آدرس و مشخصات دیگر را در اینجا بنویسید"></textarea>
     </div>
 	<div class="col-md-12 mb-3">
       <label for="customFile">انتخاب فایل</label>
