--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
                             <div id="collapse1_6" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingOne">
                                 <div class="panel-body p-4">
                                     <p class="mbr-fonts-style panel-text display-7">
-                                       لیست قیمت مصرف کننده در صفحه نخست وب سایت یوتاب در منوی دریافت فایل قرار دارد</p>
+                                       لیست قیمت مصرف کننده و همکار در صفحه نخست وب سایت یوتاب در منوی دریافت فایل قرار دارد</p>
                                 </div>
                             </div>
                         </div>
