--- a/eshop.html
+++ b/eshop.html
@@ -274,7 +274,7 @@
                     </div>
                     <div class="icon-contacts pb-3">
                         <h5 class="align-left mbr-fonts-style display-7">آماده دریافت پیشنهادات و انتقادات شما هستیم</h5>
-                        <p class="mbr-text align-left mbr-fonts-style display-5">+98 21 44753410 :تلفن<br>youtob.ir@gmail.com :ایمیل<br>نشانی: تهران، شهرک گلستان، بلوار هوانیروز، خیابان گل آرا، کوچه کوهیار غربی، پلاک 33</p>
+                        <p class="mbr-text align-left mbr-fonts-style display-5">+98 21 44753410 :تلفن<br>youtob.ir@gmail.com :ایمیل<br>نشانی: تهران، خیابان شهران، کوچه قدس، پلاک 16</p>
                     </div>
                 </div>
 		<div>
