--- a/index.html
+++ b/index.html
@@ -282,7 +282,13 @@
 	             	لطفا آزمون امنیتی را انجام دهید
 		  </div>
     		</div>
-		<div class="col-md-12 input-group-btn"><button type="submit" id="submit-form" class="btn btn-primary btn-form display-4"><span class="" style="font-size: 30px; color: rgb(255, 255, 255);"></span>ارسال</button></div>
+		<br>
+		<div class="col-md-12 input-group-btn"><button type="submit" id="submit-form" class="btn btn-sm btn-primary btn-form display-4 ld-ext-left"><span class="" style="font-size: 30px; color: rgb(255, 255, 255);"></span>ارسال
+		<div class="ld ldld bare align-middle"
+       		style="width:1em;height:1em">
+  		</div>
+		</button>
+		</div>
 		</div>
 		</form>
 		</div>
