--- a/index.html
+++ b/index.html
@@ -24,7 +24,12 @@
   <link rel="stylesheet" href="assets/theme/css/style.css">
   <link rel="stylesheet" href="assets/gallery/style.css">
   <link href="assets/fonts/style.css" rel="stylesheet">
-  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
+  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css">
+  <link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
+  <link rel="stylesheet" href="assets/loader/ldbtn.min.css">
+  <link rel="stylesheet" href="assets/loader/ldld.min.css">
+  
+  <script src="assets/loader/ldld.min.js"></script>
     
   <meta name="google-site-verification" content="m6ht-PlkGdUxgl0-JVAuVxYrzGIX0mLASiRxVfyLu20" />
 </head>
