--- a/appdl.html
+++ b/appdl.html
@@ -25,6 +25,10 @@
   <link href="assets/fonts/style.css" rel="stylesheet">
   <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css">
   <link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
+  <link rel="stylesheet" href="assets/loader/ldbtn.min.css">
+  <link rel="stylesheet" href="assets/loader/ldld.min.css">
+  
+  <script src="assets/loader/ldld.min.js"></script>
 </head>
 <body>
 
@@ -205,7 +209,12 @@
 	             	لطفا آزمون امنیتی را انجام دهید
 		  </div>
     		</div>
-		<div class="col-md-12 input-group-btn"><button type="submit" id="submit-form" class="btn btn-primary btn-form display-4"><span class="" style="font-size: 30px; color: rgb(255, 255, 255);"></span>ارسال</button></div>
+		<br>
+		<div class="col-md-12 input-group-btn"><button type="submit" id="submit-form" class="btn btn-sm btn-primary btn-form display-4 ld-ext-left"><span class="" style="font-size: 30px; color: rgb(255, 255, 255);"></span>ارسال
+		<div class="ld ldld bare align-middle" style="width:1em;height:1em">
+		</div>
+		</button>
+		</div>
 		</div>
 		</form>
 		</div>
@@ -236,7 +245,6 @@
     </div>
 </section>
 
-
   <script src="assets/web/assets/jquery/jquery.min.js"></script>
   <script src="assets/popper/popper.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
@@ -252,8 +260,7 @@
   <script src="assets/alertifyjs/alertify.min.js"></script>
   <script src="https://www.google.com/recaptcha/api.js?explicit&hl=fa"></script>
   <script src="assets/indexvalid.js"></script>
-  
-  
+    
  <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
   </body>
 </html>
