--- a/coupon.html
+++ b/coupon.html
@@ -23,10 +23,12 @@
   <link rel="stylesheet" href="assets/socicon/css/styles.css">
   <link rel="stylesheet" href="assets/theme/css/style.css">
   <link href="assets/fonts/style.css" rel="stylesheet">
-  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
+  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css">
+  <link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
+  <link rel="stylesheet" href="assets/loader/ldbtn.min.css">
+  <link rel="stylesheet" href="assets/loader/ldld.min.css">
   
-  
-  
+  <script src="assets/loader/ldld.min.js"></script>
 </head>
 <body>
 
@@ -138,7 +140,13 @@
 	             	لطفا آزمون امنیتی را انجام دهید
 		  </div>
     		</div>
-		<div class="col-md-12 input-group-btn"><button type="submit" id="submit-form" class="btn btn-primary btn-form display-4"><span class="" style="font-size: 30px; color: rgb(255, 255, 255);"></span>ارسال</button></div>
+		<br>
+		<div class="col-md-12 input-group-btn"><button type="submit" id="submit-form" class="btn btn-sm btn-primary btn-form display-4 ld-ext-left"><span class="" style="font-size: 30px; color: rgb(255, 255, 255);"></span>ارسال
+		<div class="ld ldld bare align-middle"
+       		style="width:1em;height:1em">
+  		</div>
+		</button>
+		</div>
 		</div>
 		</form>
 		</div>
