--- a/reseller.html
+++ b/reseller.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html  >
+<html>
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -23,10 +23,12 @@
   <link rel="stylesheet" href="assets/socicon/css/styles.css">
   <link rel="stylesheet" href="assets/theme/css/style.css">
   <link href="assets/fonts/style.css" rel="stylesheet">
-  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
+  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css">
+  <link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
+  <link rel="stylesheet" href="assets/loader/ldbtn.min.css">
+  <link rel="stylesheet" href="assets/loader/ldld.min.css">
   
-  
-  
+  <script src="assets/loader/ldld.min.js"></script>
 </head>
 <body>
 
@@ -42,10 +44,7 @@
 </script>
 <!-- /Google Analytics -->
 
-
   <section class="menu cid-rE1y2lSwwv" once="menu" id="menu1-m">
-
-    
 
     <nav class="navbar navbar-expand beta-menu navbar-dropdown align-items-center navbar-fixed-top navbar-toggleable-sm">
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -76,8 +75,6 @@
 </section>
 
 <section class="engine"></section><section class="header1 cid-rOBd55AUsF mbr-fullscreen mbr-parallax-background" id="header1-n">
-
-    
 
     <div class="mbr-overlay" style="opacity: 0.6; background-color: rgb(0, 0, 0);">
     </div>
@@ -139,7 +136,13 @@
 	             	لطفا آزمون امنیتی را انجام دهید
 		  </div>
     		</div>
-		<div class="col-md-12 input-group-btn"><button type="submit" id="submit-form" class="btn btn-primary btn-form display-4"><span class="" style="font-size: 30px; color: rgb(255, 255, 255);"></span>ارسال</button></div>
+		<br>
+		<div class="col-md-12 input-group-btn"><button type="submit" id="submit-form" class="btn btn-sm btn-primary btn-form display-4 ld-ext-left"><span class="" style="font-size: 30px; color: rgb(255, 255, 255);"></span>ارسال
+		<div class="ld ldld bare align-middle"
+       		style="width:1em;height:1em">
+  		</div>
+		</button>
+		</div>
 		</div>
 		</form>
 		</div>
@@ -170,7 +173,6 @@
     </div>
 </section>
 
-
   <script src="assets/web/assets/jquery/jquery.min.js"></script>
   <script src="assets/popper/popper.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
@@ -186,7 +188,6 @@
   <script src="assets/alertifyjs/alertify.min.js"></script>
   <script src="https://www.google.com/recaptcha/api.js?explicit&hl=fa"></script>
   <script src="assets/indexvalid.js"></script>
-  
   
  <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
   </body>
