--- a/eshop.html
+++ b/eshop.html
@@ -144,8 +144,13 @@
 	<div class="help-block with-errors"></div>
 	</div>
   </div>
-        <p>&nbsp;</p>
-  <button class="btn btn-sm btn-primary display-5" style="font-size: 20px;" type="submit"><span class="sr-only"></span>ثبت نام</button>
+  <br>
+  <div class="col-md-12 input-group-btn"><button type="submit" id="register-btn" class="btn btn-sm btn-primary btn-form display-4 ld-ext-left"><span class="" style="font-size: 30px; color: rgb(255, 255, 255);"></span>ثبت نام
+  <div class="ld ldld bare align-middle" style="width:1em;height:1em">
+  </div>
+  </button>
+  </div>
+</div>
 </form>
     </div>
     </div>
@@ -251,7 +256,11 @@
   <input name="کد" type="hidden" value="" class="form-control">
   <input name="کدسایز" type="hidden" value="" class="form-control">
   <input name="ضخامت" type="hidden" value="" class="form-control">
-  <button id="orderbtn" class="btn btn-sm btn-primary display-5" style="font-size: 20px;" type="submit">ثبت سفارش&nbsp;&nbsp;</button>
+  <div class="col-md-12 input-group-btn"><br><button type="submit" id="orderbtn" class="btn btn-sm btn-primary btn-form display-4 ld-ext-left"><span class="" style="font-size: 30px; color: rgb(255, 255, 255);"></span>ثبت سفارش
+  <div class="ld ldld bare align-middle" style="width:1em;height:1em">
+  </div>
+  </button>
+ </div>
 </form>
     </div>
     </div>
