--- a/index.html
+++ b/index.html
@@ -357,6 +357,16 @@
         </div>
     </div>
 </section>
+<section once="footers" class="cid-rQ0s0deRyj mbr-reveal" id="footer6-h">
+
+    <div class="container">
+        <div class="media-container-row align-center mbr-white">
+            <div class="col-12">
+                <p class="mbr-text mb-0 mbr-fonts-style display-4">کلیه حقوق مادی و معنوی این سایت متعلق به گروه دکوراسیون یوتاب می باشد</p>
+            </div>
+        </div>
+    </div>
+</section>
 
   <script src="assets/web/assets/jquery/jquery.min.js"></script>
   <script src="assets/popper/popper.min.js"></script>
