--- a/reseller.html
+++ b/reseller.html
@@ -151,23 +151,39 @@
     </div>
 </section>
 
-<section class="cid-rOBc8VTUnb" id="social-buttons2-m">
+<section class="cid-rDs2pemzpU" id="social-buttons2-4">
 
     <div class="container">
         <div class="media-container-row">
             <div class="col-md-8 align-center">
-                
                 <div class="social-list pl-0 mb-0">
-                    <a href="http://www.youtob.ir/app/youtob.apk">
-                        <span class="px-2 mbr-iconfont mbr-iconfont-social socicon-android socicon"></span>
+                    <a href="https://www.facebook.com/youtobphotopanels/" target="_blank">
+                        <span class="px-2 mbr-iconfont mbr-iconfont-social socicon-facebook socicon" style="font-size: 29px;"></span>
                     </a>
-                    <a href="tg://resolve?domain=youtob_ir" target="_blank">
+                    <a href="https://t.me/youtob_ir" target="_blank">
                         <span class="px-2 mbr-iconfont mbr-iconfont-social socicon-telegram socicon"></span>
                     </a>
                     <a href="https://instagram.com/youtob_ir" target="_blank">
                         <span class="px-2 mbr-iconfont mbr-iconfont-social socicon-instagram socicon"></span>
                     </a>
+                    <a href="https://www.youtube.com/watch?v=vHhRRpbdqfc" target="_blank">
+                        <span class="px-2 mbr-iconfont mbr-iconfont-social mobi-mbri-video-play mobi-mbri" style="color: rgb(255, 51, 102); fill: rgb(255, 51, 102); font-size: 37px;"></span>
+                    </a>
+                    <a href="https://www.linkedin.com/feed/update/urn:li:activity:6631112794278289408/" target="_blank">
+                        <span class="px-2 mbr-iconfont mbr-iconfont-social socicon-linkedin socicon" style="font-size: 31px;"></span>
+                    </a>
                 </div>
+            </div>
+        </div>
+    </div>
+</section>
+												     
+<section once="footers" class="cid-rQ0s0deRyj mbr-reveal" id="footer6-h">
+
+    <div class="container">
+        <div class="media-container-row align-center mbr-white">
+            <div class="col-12">
+                <p class="mbr-text mb-0 mbr-fonts-style display-4">کلیه حقوق مادی و معنوی این سایت متعلق به گروه دکوراسیون یوتاب می باشد</p>
             </div>
         </div>
     </div>
