--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                         <a class="btn btn-md btn-secondary display-5" href="https://www.dropbox.com/s/t5x68bybaro2n3m/Pricing-Canvas.pdf?dl=1"><span class="mbri-cash mbr-iconfont mbr-iconfont-btn"></span>لیست قیمت</a></div>
             </div>
 
-            <div class="mbr-figure" style="width: 100%;"><video src="https://www.youtob.ir/assets/images/youtob-promo.mp4" width="480" height="360" controls type="video/mp4"></video></div>
+            <div class="mbr-figure" style="width: 100%;"><video class="embed-responsive-item" src="https://www.youtob.ir/assets/images/youtob-promo.mp4" width="480" height="360" controls type="video/mp4"></video></div>
 
         </div>
     </div>
