--- a/index.html
+++ b/index.html
@@ -377,6 +377,9 @@
                     <a href="https://www.linkedin.com/feed/update/urn:li:activity:6631112794278289408/" target="_blank">
                         <span class="px-2 mbr-iconfont mbr-iconfont-social socicon-linkedin socicon" style="font-size: 31px;"></span>
                     </a>
+		    <a href="https://twitter.com/youtobskypanel" target="_blank">
+                        <span class="px-2 mbr-iconfont mbr-iconfont-social socicon-twitter socicon"></span>
+                    </a>
                 </div>
             </div>
         </div>
