--- a/index.html
+++ b/index.html
@@ -81,6 +81,9 @@
   gtag('config', 'UA-56291032-1');
 </script>
 <!-- /Google Analytics -->
+	
+<script src="https://apps.elfsight.com/p/platform.js" defer></script>
+<div class="elfsight-app-3ef74824-ccfd-4c34-9f17-ccd478a02baa"></div>
 
   <section class="menu cid-rE1y2lSwwv" once="menu" id="menu1-n">
 
