--- a/index.html
+++ b/index.html
@@ -81,6 +81,17 @@
   gtag('config', 'UA-56291032-1');
 </script>
 <!-- /Google Analytics -->
+	
+
+<script src="https://static.landbot.io/whatsapp-widget/whatsapp-button-widget.js"></script>
+   <script>
+     var whatsAppBtn = new LandbotWhatsAppBtn({
+         dialcode: '98',
+         phone: '9355867171',
+         text: 'سوالی دارید؟ بیست و چهار ساعت شبانه روز و هفت روز هفته آماده پاسخگویی به شما عزیزان هستیم',
+       });
+       whatsAppBtn.renderButton()
+</script>
 
   <section class="menu cid-rE1y2lSwwv" once="menu" id="menu1-n">
 
