--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 </script>
 <!-- /Google Analytics -->	
 
-<script src="https://static.landbot.io/whatsapp-widget/whatsapp-button-widget.js"></script>
+<script src="assets/whatsapp-button-widget.js"></script>
    <script>
      var whatsAppBtn = new LandbotWhatsAppBtn({
          dialcode: '98',
