--- a/index.html
+++ b/index.html
@@ -193,15 +193,10 @@
                 </div>
             </div>
             <!--Card-3-->
-            <div itemscope itemtype=”http://schema.org/Product” class="card col-12 col-md-6 p-3 col-lg-4 last-child">
+            <div class="card col-12 col-md-6 p-3 col-lg-4 last-child">
                 <div class="card-wrapper">
                     <div class="card-img">
                         <img itemprop=”image” src="assets/images/1-696x985.jpg" alt="آسمان مجازی" title="یوتاب">
-			<span itemprop=”name”>Product Name</span>
-			<div itemprop=”aggregateRating itemscope itemtype=”http://schema.org/AggregateRating”>
-			<span itemprop=”ratingValue”>5</span>
-			out of <span itemprop=”bestRating”>5</span>
-			based on <span itemprop=”ratingCount”>3923</span> user ratings.
                     </div>
                     <div class="card-box">
                         <h4 class="card-title mbr-fonts-style display-5"><strong>
