--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
   "name" : "آسمان مجازی و تابلوهای شاسی یوتاب",
   "image" : "https://youtob.ir/assets/images/photo-2016-11-22-12-06-40-156x156.png",
   "telephone" : "+98 21 44753410",
-  "email" : "youtob.ir@gmail.com",
+  "email" : "youtob.ir[at]gmail.com",
   "address" : {
     "@type" : "PostalAddress",
     "streetAddress" : "خیابان شهران، کوچه قدس، پلاک 16",
@@ -316,7 +316,7 @@
                     </div>
                     <div class="icon-contacts pb-3">
                         <h5 class="align-left mbr-fonts-style display-7">آماده دریافت پیشنهادات و انتقادات شما هستیم</h5>
-                        <p class="mbr-text align-left mbr-fonts-style display-5">+98 21 44753410 :تلفن<br>youtob.ir@gmail.com :ایمیل<br>نشانی: تهران، خیابان شهران، کوچه قدس، پلاک 16</p>
+                        <p class="mbr-text align-left mbr-fonts-style display-5">+98 21 44753410 :تلفن<br>youtob.ir[at]gmail.com :ایمیل<br>نشانی: تهران، خیابان شهران، کوچه قدس، پلاک 16</p>
                     </div>
                 </div>
 		<div>
