--- a/index.html
+++ b/index.html
@@ -57,7 +57,14 @@
       "name" : "Sat - Thu"
     }
   },
-  "url" : "https://www.youtob.ir/",
+  "url" : "https://youtob.ir/",
+   "sameAs" : [
+   "https://twitter.com/youtobskypanel",
+   "https://www.facebook.com/youtobphotopanels/",
+   "https://instagram.com/youtob_ir",
+   "https://www.youtube.com/watch?v=vHhRRpbdqfc", 
+   "https://www.linkedin.com/feed/update/urn:li:activity:6631112794278289408/"
+   ],
   "aggregateRating" : {
     "@type" : "AggregateRating",
     "ratingValue" : "5",
