--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
   <link rel="shortcut icon" href="assets/images/photo-2016-11-22-12-06-40-156x156.png" type="image/x-icon">
   <link rel="alternate" href="https://youtob.ir" hreflang="fa-IR"/>
-  <meta name="description" content="گروه یوتاب سازنده انواع پنل های سقفی آسمان مجازی، پنل های سه بعدی و تابلوهای دیواری با طرح های بسیار متنوع، دلخواه مشتری و با کیفیت و دوام بالا و ضمانت طولانی مدت">
+  <meta name="description" content="گروه یوتاب سازنده انواع پنل های آسمان مجازی، پنل های سه بعدی و تابلوهای دیواری با طرح های بسیار متنوع، دلخواه مشتری و با کیفیت و دوام بالا و ضمانت طولانی مدت">
   <meta name="keywords" content="آسمان مجازی,سقفی,روشنایی,یوتاب,داخلی,طراحی,دکوراسیون,سه بعدی,چاپ,شاسی,پنل,تابلو,آشپزخانه,اتاق خواب,پذیرایی,عکس,آلبوم,منزل,سقف کاذب,کناف">  
 
   <title> آسمان مجازی و انواع تابلوهای دیواری یوتاب - صفحه اصلی</title>
