--- a/index.html
+++ b/index.html
@@ -130,8 +130,31 @@
     <div class="container">
         <div class="media-container-row">
             <div class="mbr-text col-12 mbr-fonts-style display-7 col-md-12"><p><strong>مختصری درباره ما</strong></p><p>گروه نورپردازي و دکوراسیون یوتاب از سال 1391 اقدام به طراحی و ساخت انواع پنل هاي طرح دار با کاربرد استفاده در سقف ( آسمان مجازي ) نموده است ، پنل هاي یاد شده در هزاران طرح و سایز گوناگون در&nbsp;<span style="font-size: 1.6rem;">دسترس عموم علاقمندان گرامی قرار گرفته است. پنل های آسمان مجازی یوتاب قابل استفاده در انواح محیط ها از قبیل پذیرایی، اتاق خواب، آشپزخانه، سرویس بهداشتی و همچنین اداره جات، سازمان ها و دفاتر می باشد. براي راحتی هر چه بیشتر مشتریان گرامی گلچین تصاویر یاد شده در قالب آلبوم تصاویر به صورت الکترونیکی در اختیار خریداران و همکاران گرامی قرار گرفته است همچنین این مجموعه براي نخستین بار در ایران اقدام به طراحی و ساخت انواع تابلوهاي دیواري زیبا در طرح ها و سایز هاي گوناگون نموده است ، علاقمندان می توانند از میان حدود 2400 عدد تصویر و 120 مورد سایز گوناگون تابلوي درخواستی خود را انتخاب و به صورت اینترنتی و یا تلفنی سفارش دهند</span></p></div>
-        </div>
     </div>
+    <br>
+    <div class="" role="tab" id="headingThree">
+        <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-core="" href="#collapse3_7" aria-expanded="false" aria-controls="collapse3">
+        <h4 class="mbr-fonts-style display-7 align-center"><strong>بیشتر بدانید</strong></h4>
+        </a>
+        </div>
+        <div id="collapse3_7" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingThree">
+        <div class="media-container-row">
+        <p class="mbr-fonts-style panel-text display-7 align-center"><br>
+گروه نور پردازی و دکوراسیون یوتاب با حدود 10 سال سابقه کاری جزو نخستین شرکتهای داخلی می باشد که اقدام به ساخت و عرضه  انواع تایل و پنل های طرح دار که  به نام آسمان مجازی  نیز معروف می باشد نموده است . 
+
+پنل های آسمان مجازی برای استفاده در انواع فضاهای مسکونی ، اداری ، تجاری ، درمانی  و  غیره  طراحی  و ساخته می شوند که  از آن جمله می توان به طراحی و اجرا ی سقف انواع سرویس های بهداشتی و حمام ، آشپزخانه ها ، آسانسور ، لابی مجموعه های اقامتی ، مراکز بهداشتی و درمانی  و غیره اشاره نمود .
+
+خریداران و علاقمندان گرامی می توانند از آرشیو  تصاویر اختصاصی  یوتاب بازدید نموده و از میان حدود  2000 عدد تصویر موجود  ، عکس و نگاره دلخواه خود را انتخاب نمایند .  آلبوم یاد شده به صورت دیجیتالی بوده  و  امکان استفاده و  دانلود رایگان آن در وب سایت یوتاب وجود دارد . 
+
+از دیگر  محصولات این شرکت می توان به انواع تابلوهای دیواری اشاره نمود که برای تهیه آرشیو و آلبوم سایز و تصاویر ویژه آن  ، حدود 3 سال زمان سپری شد  .   آلبوم  تصاویر یاد شده به صورت کاملا دیجیتالی بوده  و با حدود 120 مورد سایز و شکل  گوناگون  و  همچنین بیش از 2400 عدد تصاویر زیبا و اختصاصی در دسترس عموم علاقمندان و خریداران گرامی قرار گرفته است  .   کاربران و بازدید کنندگان گرامی  می توانند آلبوم دیجیتالی یاد شده  را به مانند مجله و کاتالوگ معمولی ورق زده و یا به صورت کامل آنرا دانلود نمایند  .   
+
+پنل های چوبی CNC  از دیگر محصولات این شرکت می باشند  که در سایز استاندارد  60 * 60  ( cm )   و حدود 80 شکل و طرح زیبا طراحی و ساخته می شوند  .  تایل و پنل های CNC  عموما به همراه طلق های  رنگی یا معمولی استفاده و جایگذاری می شوند که با توجه به نوع طرح های بکار رفته و موجود که عموما بیشتر به صورت سنتی و قدیمی می باشند ، طراحی و دکوراسیون های انجام شده با این روش از زیبائی ویژه و خاصی برخوردار خواهند بود . 
+
+آلبوم طرح های مربوط به  تایل و پنل های CNC  به صورت تمام دیجیتال در دسترس عموم علاقمندان بوده و کاربران گرامی می توانند از آن بازدید و یا در صورت تمایل به صورت رایگان دانلود نمایند
+</p>
+        </div>
+    </div> 	
+</div>
 </section>
 
 <section class="header7 cid-rPCPGqia8I" id="header7-l">
