--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
     <div class="container">
 
     <div class="title pb-5 col-12">
-	<h2 class="align-right pb-3 mbr-fonts-style display-2">
+	<h2 class="align-center pb-3 mbr-fonts-style display-2">
 	حضور در نمایشگاه ها</h2>
     </div>
 
