--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
 
 پنل های آسمان مجازی برای استفاده در انواع فضاهای مسکونی ، اداری ، تجاری ، درمانی  و  غیره  طراحی  و ساخته می شوند که  از آن جمله می توان به طراحی و اجرا ی سقف انواع سرویس های بهداشتی و حمام ، آشپزخانه ها ، آسانسور ، لابی مجموعه های اقامتی ، مراکز بهداشتی و درمانی  و غیره اشاره نمود .
 
-خریداران و علاقمندان گرامی می توانند از آرشیو  تصاویر اختصاصی  یوتاب بازدید نموده و از میان حدود  2000 عدد تصویر موجود  ، عکس و نگاره دلخواه خود را انتخاب نمایند .  آلبوم یاد شده به صورت دیجیتالی بوده  و  امکان استفاده و  دانلود رایگان آن در وب سایت یوتاب وجود دارد <br>. 
+خریداران و علاقمندان گرامی می توانند از آرشیو  تصاویر اختصاصی  یوتاب بازدید نموده و از میان حدود  2000 عدد تصویر موجود  ، عکس و نگاره دلخواه خود را انتخاب نمایند .  آلبوم یاد شده به صورت دیجیتالی بوده  و  امکان استفاده و  دانلود رایگان آن در وب سایت یوتاب وجود دارد . <br>
 
 از دیگر  محصولات این شرکت می توان به انواع تابلوهای دیواری اشاره نمود که برای تهیه آرشیو و آلبوم سایز و تصاویر ویژه آن  ، حدود 3 سال زمان سپری شد  .   آلبوم  تصاویر یاد شده به صورت کاملا دیجیتالی بوده  و با حدود 120 مورد سایز و شکل  گوناگون  و  همچنین بیش از 2400 عدد تصاویر زیبا و اختصاصی در دسترس عموم علاقمندان و خریداران گرامی قرار گرفته است  .   کاربران و بازدید کنندگان گرامی  می توانند آلبوم دیجیتالی یاد شده  را به مانند مجله و کاتالوگ معمولی ورق زده و یا به صورت کامل آنرا دانلود نمایند  .   
 
