--- a/index.html
+++ b/index.html
@@ -140,19 +140,11 @@
         <div id="collapse3_7" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingThree">
         <div class="media-container-row">
         <p class="mbr-fonts-style panel-text display-7 align-center"><br>
-گروه نور پردازی و دکوراسیون یوتاب با حدود 10 سال سابقه کاری جزو نخستین شرکتهای داخلی می باشد که اقدام به ساخت و عرضه  انواع تایل و پنل های طرح دار که  به نام آسمان مجازی  نیز معروف می باشد نموده است . 
-
-پنل های آسمان مجازی برای استفاده در انواع فضاهای مسکونی ، اداری ، تجاری ، درمانی  و  غیره  طراحی  و ساخته می شوند که  از آن جمله می توان به طراحی و اجرا ی سقف انواع سرویس های بهداشتی و حمام ، آشپزخانه ها ، آسانسور ، لابی مجموعه های اقامتی ، مراکز بهداشتی و درمانی  و غیره اشاره نمود
-	</p>
-        <p class="mbr-fonts-style panel-text display-7 align-center"><br>
-خریداران و علاقمندان گرامی می توانند از آرشیو  تصاویر اختصاصی  یوتاب بازدید نموده و از میان حدود  2000 عدد تصویر موجود  ، عکس و نگاره دلخواه خود را انتخاب نمایند .  آلبوم یاد شده به صورت دیجیتالی بوده  و  امکان استفاده و  دانلود رایگان آن در وب سایت یوتاب وجود دارد . 
-از دیگر  محصولات این شرکت می توان به انواع تابلوهای دیواری اشاره نمود که برای تهیه آرشیو و آلبوم سایز و تصاویر ویژه آن  ، حدود 3 سال زمان سپری شد  .   آلبوم  تصاویر یاد شده به صورت کاملا دیجیتالی بوده  و با حدود 120 مورد سایز و شکل  گوناگون  و  همچنین بیش از 2400 عدد تصاویر زیبا و اختصاصی در دسترس عموم علاقمندان و خریداران گرامی قرار گرفته است  .
-کاربران و بازدید کنندگان گرامی  می توانند آلبوم دیجیتالی یاد شده  را به مانند مجله و کاتالوگ معمولی ورق زده و یا به صورت کامل آنرا دانلود نمایند  .   
-	</p>
-	<p class="mbr-fonts-style panel-text display-7 align-center"><br>
-پنل های چوبی CNC  از دیگر محصولات این شرکت می باشند  که در سایز استاندارد  60 * 60  ( cm )   و حدود 80 شکل و طرح زیبا طراحی و ساخته می شوند  .  تایل و پنل های CNC  عموما به همراه طلق های  رنگی یا معمولی استفاده و جایگذاری می شوند که با توجه به نوع طرح های بکار رفته و موجود که عموما بیشتر به صورت سنتی و قدیمی می باشند ، طراحی و دکوراسیون های انجام شده با این روش از زیبائی ویژه و خاصی برخوردار خواهند بود . 
-
-آلبوم طرح های مربوط به  تایل و پنل های CNC  به صورت تمام دیجیتال در دسترس عموم علاقمندان بوده و کاربران گرامی می توانند از آن بازدید و یا در صورت تمایل به صورت رایگان دانلود نمایند
+گروه نور پردازی و دکوراسیون یوتاب با حدود 10 سال سابقه کاری جزو نخستین شرکتهای داخلی می باشد که اقدام به ساخت و عرضه انواع تایل و پنل های طرح دار که  به نام آسمان مجازی نیز معروف می باشد نموده است . 
+پنل های آسمان مجازی برای استفاده در انواع فضاهای مسکونی ، اداری ، تجاری ، درمانی  و  غیره  طراحی  و ساخته می شوند که از آن جمله می توان به طراحی و اجرا ی سقف انواع سرویس های بهداشتی و حمام، آشپزخانه ها، آسانسور، لابی مجموعه های اقامتی، مراکز بهداشتی و درمانی و غیره اشاره نمود
+خریداران و علاقمندان گرامی می توانند از آرشیو  تصاویر اختصاصی  یوتاب بازدید نموده و از میان حدود 2000 عدد تصویر موجود عکس و نگاره دلخواه خود را انتخاب نمایند . آلبوم یاد شده به صورت دیجیتالی بوده و امکان استفاده و دانلود رایگان آن در وب سایت یوتاب وجود دارد . 
+از دیگر محصولات این شرکت می توان به انواع تابلوهای دیواری اشاره نمود . آلبوم تصاویر یاد شده به صورت کاملا دیجیتالی بوده و با حدود 120 مورد سایز و شکل گوناگون و همچنین بیش از 2400 عدد تصاویر زیبا و اختصاصی در دسترس عموم علاقمندان و خریداران گرامی قرار گرفته است .
+کاربران و بازدید کنندگان گرامی  می توانند آلبوم دیجیتالی یاد شده را به مانند مجله و کاتالوگ معمولی ورق زده و یا به صورت کامل آنرا دانلود نمایند. 
 </p>
         </div>
     </div> 	
